exports[`<List /> render with no suggestions list 1`] = `null`;

exports[`<List /> render with suggestions list (open:false) 1`] = `null`;

exports[`<List /> render with suggestions list (open:true) 1`] = `
<ul
  className="dropdown-menu"
  style={
    Object {
      "cursor": "pointer",
      "display": "block",
      "maxHeight": 250,
      "minWidth": 30,
      "overflow": "auto",
      "width": "inherit",
    }
  }>
  <li
    onClick={[Function]}
    onMouseEnter={[Function]}
    style={
      Object {
        "backgroundColor": "#f5f5f5",
      }
    }>
    <a>
      suggest-1
    </a>
  </li>
</ul>
`;

exports[`<List /> render with suggestions list (open:true, index:0) 1`] = `
<ul
  className="dropdown-menu"
  style={
    Object {
      "cursor": "pointer",
      "display": "block",
      "maxHeight": 250,
      "minWidth": 30,
      "overflow": "auto",
      "width": "inherit",
    }
  }>
  <li
    onClick={[Function]}
    onMouseEnter={[Function]}
    style={
      Object {
        "backgroundColor": "#f5f5f5",
      }
    }>
    <a>
      suggest-0
    </a>
  </li>
  <li
    onClick={[Function]}
    onMouseEnter={[Function]}
    style={
      Object {
        "backgroundColor": false,
      }
    }>
    <a>
      suggest-1
    </a>
  </li>
</ul>
`;

exports[`<List /> render with suggestions list (open:true, index:1) 1`] = `
<ul
  className="dropdown-menu"
  style={
    Object {
      "cursor": "pointer",
      "display": "block",
      "maxHeight": 250,
      "minWidth": 30,
      "overflow": "auto",
      "width": "inherit",
    }
  }>
  <li
    onClick={[Function]}
    onMouseEnter={[Function]}
    style={
      Object {
        "backgroundColor": false,
      }
    }>
    <a>
      suggest-0
    </a>
  </li>
  <li
    onClick={[Function]}
    onMouseEnter={[Function]}
    style={
      Object {
        "backgroundColor": "#f5f5f5",
      }
    }>
    <a>
      suggest-1
    </a>
  </li>
</ul>
`;
